# LoL-Draft-Helper

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEV.md  README.md
.github/workflows/: build-smoke.yml  release.yml  update-dataset.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-sidecar-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-cdn-data-plane/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-04-PLAN.md  02-CONTEXT.md  02-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
counterpick-app/: .gitignore  README.md  START_FRONTEND.bat  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
counterpick-app/apps/backend/: .env.example  .gitignore  DATABASE_SCHEMA.md  PROJEKT_DOKUMENTATION.md  README.md  SCORE_CALCULATION.md  START_BACKEND_ADMIN.bat  TROUBLESHOOTING.md  backend.py  backend.spec  env.example.txt  league_client_api.py  league_client_auth.py  league_client_websocket.py  live_client_api.py  package.json  pyproject.toml  recommendation_config.py  recommendation_engine.py  requirements.txt  smoke_test_exe.py  start.ps1  test_backend_cli.py  test_draft_active.py  test_json_repo_cache.py  test_json_repo_contract.py
counterpick-app/apps/backend/scripts/: test_virustotal_check.py  virustotal_check.py
counterpick-app/apps/backend/src/lolalytics_api/: __init__.py  champion_roles.json  champion_roles_README.md  config.py  json_repo.py  main.py  resources.py  supabase_client.py  supabase_repo.py
counterpick-app/apps/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
counterpick-app/src-tauri/: Cargo.toml  tauri.conf.json
counterpick-app/src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs
counterpick-app/src-tauri/tests/: smoke_test.rs
docs/: DATA-PIPELINE.md  RELEASE.md
docs/superpowers/specs/: 2026-04-14-delivery-form-design.md
supabase-dataset-updater/: .env.example  .gitignore  README.md  START_UPDATE.bat  package.json  pnpm-lock.yaml  requirements-dev.txt  tsconfig.json
supabase-dataset-updater/scripts/: export_to_json.py  test_export_to_json.py
supabase-dataset-updater/src/: riot.ts  supabase-etl.ts  utils.ts
(+37 files in other folders)
