[package]
name = "lol-draft-analyzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "lol_draft_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
win32job = "2"
windows-sys = { version = "0.59", features = [
  "Win32_System_Console",
  "Win32_Foundation"
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
